service PushTokensService {
  rpc AddToken (AddTokenRequest) returns (ErrorResult) {}
  rpc DelToken (DelTokenRequest) returns (ErrorResult) {}
  rpc GetTokens (GetTokensRequest) returns (GetTokensResult) {}
}

enum TokenType {
  Android = 0;
  Iphone = 1;
}

message TokenInfo {
  uint64 id = 1;
  uint64 user_id = 2;
  TokenType type = 3;
  string token = 4;
  string about = 5;
}

message AddTokenRequest{
  TokenInfo token = 1;
}

message DelTokenRequest {
  uint64 token_id = 1;
  // user_id should be same as in tocken. Error will be returned otherwise
  uint64 user_id = 2;
}

message ErrorResult {
  // empty if there was no errors
  string error = 1;
}

message GetTokensRequest {
  uint64 user_id = 1;
}

message GetTokensResult {
  repeated TokenInfo tokens = 1;
  string error = 2;
}
